Bug 83891 - Autorecovery does not display document name correctly if it contains the text " - "
Summary: Autorecovery does not display document name correctly if it contains the text...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
4.3.1.2 release
Hardware: Other All
: medium normal
Assignee: Matthew Francis
URL:
Whiteboard: target:4.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-09-15 14:40 UTC by Matthew Francis
Modified: 2014-09-24 05:49 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Matthew Francis 2014-09-15 14:40:19 UTC
When the autorecovery dialog shows after a crash, any file which contains the text " - " has the following part of the filename cut off in the list of documents for recovery.

This is caused by a bug in RecoveryCore::statusChanged(), which takes what was originally a window title and attempts to remove any text like " - LibreOffice Writer" by cutting off everything after the first " - " without considering that a filename could contain this text.
Comment 1 Commit Notification 2014-09-19 08:18:54 UTC
Matthew J. Francis committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=cd68903660d2ba71fe6e033b0ae7880366913a4e

fdo#83891 Show document names including " - " during autorecovery



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.