fdo#83891 Show document names including " - " during autorecovery

Change-Id: I9c8076ec51858967ddde0dbbf109f30025975d57